# pmx-ai-copilot

./: .gitignore  DESIGN.md  README.md  WAR_ROOM.md  render.yaml
.github/workflows/: ci.yml  keep-warm.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_risks_metadata.py
apps/api/scripts/: seed_demo.py
apps/api/src/pmx_api/: __init__.py  config.py  deps.py  main.py  observability.py
apps/api/src/pmx_api/auth/: __init__.py  clerk.py
apps/api/src/pmx_api/db/: __init__.py  session.py
apps/api/src/pmx_api/db/models/: __init__.py  base.py  chat.py  document.py  event.py  health.py  notification.py  organization.py  project.py  report.py  risk.py  structured.py  user.py
apps/api/src/pmx_api/pipeline/: __init__.py  extract.py  retrieve.py
apps/api/src/pmx_api/routers/: chat.py  demo.py  documents.py  health.py  me.py  meetings.py  project_health.py  projects.py  risks.py
apps/api/src/pmx_api/services/: __init__.py  health.py  risks.py
apps/api/storage/: 08b157bc-867d-429c-834c-a37e80d701aa.txt  48571fb2-9efb-4ddc-b603-f71cf0e59a71.txt  64740179-4a86-4e77-bef8-886720f0c705.txt  69c7d910-3e5b-49a5-9e87-b92fc70679e7.txt  8aa1100a-39ae-4aaa-959d-36f10e373abc.txt  baa98738-f7c0-4589-b279-588e065cc6ea.txt
apps/api/tests/: conftest.py  test_auth.py  test_chat.py  test_db.py  test_documents.py  test_health.py  test_meetings.py  test_project_health.py  test_projects.py  test_risks.py
apps/web/: .env.example  package.json  pnpm-lock.yaml
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  icon.tsx  layout.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/chat/: page.tsx
apps/web/src/app/(app)/dashboard/: dashboard-view.tsx  page.tsx
apps/web/src/app/(app)/notifications/: page.tsx
apps/web/src/app/(app)/projects/: page.tsx  projects-view.tsx
apps/web/src/app/(app)/projects/[id]/: chat-panel.tsx  documents-panel.tsx  meetings-panel.tsx  page.tsx  project-detail.tsx  risks-panel.tsx
apps/web/src/app/(app)/reports/: page.tsx
apps/web/src/app/(app)/settings/: page.tsx
apps/web/src/app/demo/: page.tsx
apps/web/src/components/: citation-chip.tsx  empty-state.tsx  health-gauge.tsx  nav-drawer.tsx  nav-rail.tsx  new-project-dialog.tsx  onboarding-modal.tsx  top-bar.tsx
apps/web/src/components/ui/: progress.tsx  select.tsx
apps/web/src/lib/: api.ts  demo-api.ts
docs/: deployment.md
docs/decisions/: 2026-07-09-m0-web-shell.md  2026-07-09-m1-kickoff.md
