[project]
name = "pmx-api"
version = "0.1.0"
description = "PMX AI Project Risk Copilot — FastAPI backend."
readme = "README.md"
authors = [
    { name = "Mohammad Shafay Joyo", email = "shafay11august@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "anthropic>=0.40",
    "cachetools>=5.5",
    "fastapi[standard]>=0.139.0",
    "greenlet>=3.0",
    "httpx>=0.28.1",
    "logfire[fastapi]>=4.37.0",
    "openai>=1.60",
    "pgvector>=0.3",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyjwt[crypto]>=2.9",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0",
    "sse-starlette>=2.1",
]

[project.scripts]
pmx-api = "pmx_api.main:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=8",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# pgvector ships without type stubs. Migrations are runtime scripts.
# pymupdf (fitz) and sse_starlette lack usable stubs for our surface.
module = ["pgvector.*", "alembic.*", "fitz.*", "pymupdf.*", "sse_starlette.*", "docx.*"]
ignore_missing_imports = true
